--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <title>Redirecting...</title>  
-    <script type="text/javascript">  
-        window.location.href = "https://genuine-engaging-pegasus.ngrok-free.app";
-    </script>  
 </head>  
 <body>  
-    <p>If you are not redirected automatically, follow the <a href="https://your-ngrok-url.ngrok.io">link</a>.</p>  
+    <p>If you are not redirected automatically, follow the <a href="https://genuine-engaging-pegasus.ngrok-free.app/">link</a>.</p>  
 </body>  
 </html>
