--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>  
 <html lang="en">  
 <head>  
-    <title>Redirecting...</title>  
 </head>  
 <body>  
-    <p>If you are not redirected automatically, follow the <a href="https://genuine-engaging-pegasus.ngrok-free.app/">link</a>.</p>  
+    <iframe src="https://genuine-engaging-pegasus.ngrok-free.app" width="100%" height="100%" style="border:none;"></iframe> 
 </body>  
 </html>
